Fixed spacing issues for arrows and get typing animations done

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -31,7 +31,7 @@
 
 .page {
   width: 100vw;
-  height: 100vh;
+  height: 98vh;
 }
 .container {
   position: relative;
@@ -41,9 +41,18 @@
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
-.header-placeholder {
+.header-filler {
   width: 100%;
   height: 62px;
+}
+.bottom-filler {
+  position: absolute;
+  bottom: 0px;
+}
+.bottom.arrow {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
 }
 .column,
 .columns {
@@ -81,7 +90,26 @@ img.screenshot {
 img.arrow {
    width: 30px;
 }
-
+.typed {
+  /*content: attr(value);*/
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  /*margin: 0 auto;*/
+  display: inline-block;
+  animation: typed 4s steps(40,end);
+}
+.typed:after {
+  content: "|";
+  display: inline-block;
+  /*position: absolute;*/
+  opacity: 0;
+  /*color:red;*/
+  animation-name: disappear;
+  animation-delay: 2s;
+  animation-duration: 1s;
+  animation-iteration-count: 3;
+}
 
 /* For devices larger than 400px */
 @media (min-width: 400px) {
@@ -201,6 +229,8 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 p {
   margin-top: 0;
   width:100%;
+  text-align: justify;
+  font-size: 2rem;
 }
 
 
@@ -498,4 +528,20 @@ there.
   0% {top: 0px}
   50% {top: -20px;}
   100% {top: 0px;}
+}
+@webkit-keyframes typed {
+  from {width:0}
+  /*50% {content: attr(alt[4])}*/
+  /*to {content: attr(alt)}*/
+}
+@keyframes typed {
+  from { width:0 }
+}
+@webkit-keyframes disappear {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+@keyframes disappear {
+  from { opacity: 1; }
+  to { opacity: 0; }
 }
